# tilepygame

./: CLAUDE.md  README.md  USAGE.md  main.py  pyproject.toml
examples/click_to_move/: main.py
src/tilepygame/: __init__.py  camera.py  engine.py  sprites.py  tilemap.py
